# dpCMake

./: .clang-tidy  .gitignore  LICENSE.md  README.md  Save.cmake  SaveOld.cmake  dp.cmake  dpCMake.cmake  dpCMakeSingleFile.cmake  dpCompilerWarnings.cmake
.github/workflows/: build.yml  ci.yml
Conan/: ConanCPython.cmake  ConanClean.bat  ConanCleanFull.bat  ConanLibClang.cmake  ConanVulkan.cmake  dpConan.cmake  dpConanQt.cmake
Conan/dp_recipes/cpython/: conanfile.py
Conan/dp_recipes/gtk/4.3.0.pre_build/: conanfile.py
Conan/dp_recipes/gtkmm/4.0.1.pre_build/: conanfile.py
Conan/dp_recipes/nana/: conanfile.py
Conan/dp_recipes/p4api/: conanfile.py
Conan/dp_recipes/refl-cpp/: conanfile.py
Conan/dp_recipes/rttr/: conanfile.py
Conan/dp_recipes/xlnt/: conanfile.py
Conan/dp_recipes_wip/flatui/: conanfile.py
Conan/dp_recipes_wip/fplbase/: conanfile.py
Conan/dp_recipes_wip/gtk/4.3.0/: conandata.yml  conanfile copy.py  conanfile.py
Conan/dp_recipes_wip/libsass/: conandata.yml  conanfile.py
Conan/dp_recipes_wip/sassc/: conandata.yml  conanfile.py
Tools/: ConfigureGlobal.cmake  ConfigureTarget.cmake  DependencyTools.cmake  FolderTools.cmake  GlobalTools.cmake  MiscTools.cmake  TargetTools.cmake  Tools.cmake  Warnings.cmake
example/: CMakeLists.txt
example/cmake/: CMakeLists.txt  Dependencies.cmake
example/src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/src/: CMakeLists.txt  main.cpp
